# statcheck_python

./: .gitignore  DOCUMENTATION.md  LICENSE.txt  README.md  pyproject.toml  requirements-locked.txt  setup.py
src/statcheck/: calc_APA_factor.py  checkdir.py  compute_p.py  constants.py  decision_error_test.py  error_test.py  extract_1tail.py  extract_stats.py  file_to_txt.py  helpers_parse_stats.py  identify_statcheck.py  plot_statcheck.py  process_stats.py  regex.py  st.py  statcheck.py  statcheck_report.py  sum_st.py  summary_statcheck.py
src/statcheck.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_APAfactor.py  test_compute_pvalues.py  test_decisionerror.py  test_error.py  test_extract_F_tests.py  test_extract_Q_tests.py  test_extract_chi2_tests.py  test_extract_correlations.py  test_extract_pvalues.py  test_extract_t_tests.py  test_extract_z_tests.py
